# WinTaskMan

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
.github/workflows/: cmake-single-platform.yml
src/: fetchfunctions.cpp  fetchfunctions.h  helperutils.cpp  helperutils.h  main.cpp  rundialog.cpp  rundialog.h  systemdataprovider.cpp  systemdataprovider.h  taskmanager.cpp  taskmanager.h
